Android support for CBL2